Renamed api/rest to api/http
